--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Alpine Tutorial</title>
+    <title>Alpine Tutorial on Windows</title>
 </head>
  <body>
     <div x-data="{name: 'Jerome'}">
